Nikolac/Syntax-Analysis/NikolaParser.output
Terminals unused in grammar

    "^^"
    "~"
    "<<"
    ">>"
    "&="
    "|="
    "^^="
    "~="
    "<<="
    ">>="
    "->"
    "::"
    "^=="
    ":"
    "..."
    "as"
    "bool"
    "char"
    "class"
    "compeval"
    "complex"
    "const"
    "dynamic"
    "enum"
    "false"
    "int8_t"
    "int16_t"
    "int32_t"
    "int64_t"
    "let"
    "new"
    "private"
    "public"
    "real"
    "static"
    "true"
    "typedef"
    "where"


Grammar

    0 $accept: nikola $end

    1 nikola: statements

    2 statements: statement statements
    3           | ε

    4 compound_statement: "{" statements "}"

    5 if_statement: "if" "(" expression ")" compound_statement

    6 else_if_statement: "else if" "(" expression ")" compound_statement

    7 else_if_statements: else_if_statement else_if_statements
    8                   | else_if_statement

    9 else_statement: "else" conditional_statement

   10 else_statement_opt: else_statement
   11                   | ε

   12 conditional_statement: if_statement else_if_statements else_statement_opt
   13                      | if_statement else_statement_opt

   14 for_loop: "for" "(" expression_opt ";" expression_opt ";" expression_opt ")" compound_statement

   15 while_loop: "while" "(" expression ")" compound_statement

   16 do_while_loop: "do" compound_statement "while" "(" expression ")" compound_statement

   17 loop_statement: for_loop
   18               | while_loop
   19               | do_while_loop

   20 match_clauses: match_clause match_clauses
   21              | match_clause

   22 match_clause: "when" expression "=>" compound_statement

   23 match_statement: "match" "(" expression ")" "{" match_clauses else_statement_opt "}"

   24 exception_statement: "try" compound_statement catch_statement catch_statements

   25 catch_statements: catch_statement catch_statements
   26                 | ε

   27 catch_statement: "catch" "(" expression ")" compound_statement

   28 jump_statement: "return" ";"
   29               | "return" expression ";"
   30               | "throw" ";"
   31               | "throw" expression ";"
   32               | "break" ";"
   33               | "continue" ";"

   34 statement: compound_statement
   35          | "noop" ";"
   36          | expression ";"
   37          | conditional_statement
   38          | loop_statement
   39          | match_statement
   40          | exception_statement
   41          | jump_statement

   42 literal: INTEGER_LITERAL
   43        | REAL_LITERAL
   44        | COMPLEX_LITERAL
   45        | STRING_LITERAL
   46        | CHARACTER_LITERAL

   47 expression_list: expression "," expression_list
   48                | expression

   49 matrix-rows: MROW_START expression_list MROW_END matrix-rows
   50            | MROW_START expression_list MROW_END

   51 expression_opt: expression
   52               | ε

   53 expression: literal
   54           | IDENTIFIER
   55           | "(" expression ")"
   56           | "|" expression "|"
   57           | expression "+" expression
   58           | expression "-" expression
   59           | expression "*" expression
   60           | expression "/" expression
   61           | expression "//" expression
   62           | expression "^" expression
   63           | expression "%" expression
   64           | expression "!"
   65           | expression "+=" expression
   66           | expression "-=" expression
   67           | expression "*=" expression
   68           | expression "/=" expression
   69           | expression "//=" expression
   70           | expression "^=" expression
   71           | expression "%=" expression
   72           | expression "+<" expression
   73           | expression "-<" expression
   74           | expression "*<" expression
   75           | expression "/<" expression
   76           | expression "//<" expression
   77           | expression "^<" expression
   78           | expression "%<" expression
   79           | expression "+<=" expression
   80           | expression "-<=" expression
   81           | expression "*<=" expression
   82           | expression "/<=" expression
   83           | expression "//<=" expression
   84           | expression "^<=" expression
   85           | expression "%<=" expression
   86           | expression "&&" expression
   87           | expression "||" expression
   88           | "!" expression
   89           | expression "==" expression
   90           | expression "!=" expression
   91           | expression "<" expression
   92           | expression "<=" expression
   93           | expression ">" expression
   94           | expression ">=" expression
   95           | expression "<=>" expression
   96           | expression "=" expression
   97           | expression "<-" expression
   98           | "&" expression
   99           | "++" expression
  100           | expression "++"
  101           | "--" expression
  102           | expression "--"
  103           | "[" expression_list "]"
  104           | "[" matrix-rows "]"
  105           | "{" expression_list "}"
  106           | "{" expression "|" expression "}"
  107           | expression "in" expression
  108           | expression "is" expression
  109           | "nothrow" "(" expression ")"
  110           | "pure" "(" expression ")"
  111           | "sizeof" "(" expression ")"
  112           | "type" "(" expression ")"


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INTEGER_LITERAL <std::string> (258) 42
    REAL_LITERAL <std::string> (259) 43
    COMPLEX_LITERAL <std::string> (260) 44
    STRING_LITERAL <std::string> (261) 45
    CHARACTER_LITERAL <std::string> (262) 46
    IDENTIFIER <std::string> (263) 54
    "+" (264) 57
    "-" (265) 58
    "*" (266) 59
    "/" (267) 60
    "//" (268) 61
    "^" (269) 62
    "%" (270) 63
    "+=" (271) 65
    "-=" (272) 66
    "*=" (273) 67
    "/=" (274) 68
    "//=" (275) 69
    "^=" (276) 70
    "%=" (277) 71
    "+<" (278) 72
    "-<" (279) 73
    "*<" (280) 74
    "/<" (281) 75
    "//<" (282) 76
    "^<" (283) 77
    "%<" (284) 78
    "+<=" (285) 79
    "-<=" (286) 80
    "*<=" (287) 81
    "/<=" (288) 82
    "//<=" (289) 83
    "^<=" (290) 84
    "%<=" (291) 85
    "&&" (292) 86
    "||" (293) 87
    "==" (294) 89
    "!=" (295) 90
    "<" (296) 91
    "<=" (297) 92
    ">" (298) 93
    ">=" (299) 94
    "<=>" (300) 95
    "!" (301) 64 88
    "&" (302) 98
    "|" (303) 56 106
    "^^" (304)
    "~" (305)
    "<<" (306)
    ">>" (307)
    "&=" (308)
    "|=" (309)
    "^^=" (310)
    "~=" (311)
    "<<=" (312)
    ">>=" (313)
    "=" (314) 96
    "<-" (315) 97
    "->" (316)
    "::" (317)
    "++" (318) 99 100
    "--" (319) 101 102
    "is" (320) 108
    "in" (321) 107
    "^==" (322)
    FACTORIAL (323)
    "[" (324) 103 104
    "]" (325) 103 104
    "," (326) 47
    "{" (327) 4 23 105 106
    "}" (328) 4 23 105 106
    ":" (329)
    "(" (330) 5 6 14 15 16 23 27 55 109 110 111 112
    ")" (331) 5 6 14 15 16 23 27 55 109 110 111 112
    ";" (332) 14 28 29 30 31 32 33 35 36
    "..." (333)
    "=>" (334) 22
    MROW_START (335) 49 50
    MROW_END (336) 49 50
    "as" (337)
    "bool" (338)
    "break" (339) 32
    "catch" (340) 27
    "char" (341)
    "class" (342)
    "compeval" (343)
    "complex" (344)
    "const" (345)
    "continue" (346) 33
    "do" (347) 16
    "dynamic" (348)
    "enum" (349)
    "else" (350) 9
    "else if" (351) 6
    "false" (352)
    "for" (353) 14
    "if" (354) 5
    "int8_t" (355)
    "int16_t" (356)
    "int32_t" (357)
    "int64_t" (358)
    "let" (359)
    "match" (360) 23
    "new" (361)
    "noop" (362) 35
    "nothrow" (363) 109
    "private" (364)
    "public" (365)
    "pure" (366) 110
    "real" (367)
    "return" (368) 28 29
    "sizeof" (369) 111
    "static" (370)
    "throw" (371) 30 31
    "true" (372)
    "try" (373) 24
    "type" (374) 112
    "typedef" (375)
    "when" (376) 22
    "where" (377)
    "while" (378) 15 16


Nonterminals, with rules where they appear

    $accept (124)
        on left: 0
    nikola (125)
        on left: 1
        on right: 0
    statements (126)
        on left: 2 3
        on right: 1 2 4
    compound_statement (127)
        on left: 4
        on right: 5 6 14 15 16 22 24 27 34
    if_statement (128)
        on left: 5
        on right: 12 13
    else_if_statement (129)
        on left: 6
        on right: 7 8
    else_if_statements (130)
        on left: 7 8
        on right: 7 12
    else_statement (131)
        on left: 9
        on right: 10
    else_statement_opt (132)
        on left: 10 11
        on right: 12 13 23
    conditional_statement (133)
        on left: 12 13
        on right: 9 37
    for_loop (134)
        on left: 14
        on right: 17
    while_loop (135)
        on left: 15
        on right: 18
    do_while_loop (136)
        on left: 16
        on right: 19
    loop_statement (137)
        on left: 17 18 19
        on right: 38
    match_clauses (138)
        on left: 20 21
        on right: 20 23
    match_clause (139)
        on left: 22
        on right: 20 21
    match_statement (140)
        on left: 23
        on right: 39
    exception_statement (141)
        on left: 24
        on right: 40
    catch_statements (142)
        on left: 25 26
        on right: 24 25
    catch_statement (143)
        on left: 27
        on right: 24 25
    jump_statement (144)
        on left: 28 29 30 31 32 33
        on right: 41
    statement (145)
        on left: 34 35 36 37 38 39 40 41
        on right: 2
    literal (146)
        on left: 42 43 44 45 46
        on right: 53
    expression_list (147)
        on left: 47 48
        on right: 47 49 50 103 105
    matrix-rows (148)
        on left: 49 50
        on right: 49 104
    expression_opt (149)
        on left: 51 52
        on right: 14
    expression (150)
        on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112
        on right: 5 6 15 16 22 23 27 29 31 36 47 48 51 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 106 107 108 109 110 111 112


State 0

    0 $accept: • nikola $end

    INTEGER_LITERAL    shift, and go to state 1
    REAL_LITERAL       shift, and go to state 2
    COMPLEX_LITERAL    shift, and go to state 3
    STRING_LITERAL     shift, and go to state 4
    CHARACTER_LITERAL  shift, and go to state 5
    IDENTIFIER         shift, and go to state 6
    "!"                shift, and go to state 7
    "&"                shift, and go to state 8
    "|"                shift, and go to state 9
    "++"               shift, and go to state 10
    "--"               shift, and go to state 11
    "["                shift, and go to state 12
    "{"                shift, and go to state 13
    "("                shift, and go to state 14
    "break"            shift, and go to state 15
    "continue"         shift, and go to state 16
    "do"               shift, and go to state 17
    "for"              shift, and go to state 18
    "if"               shift, and go to state 19
    "match"            shift, and go to state 20
    "noop"             shift, and go to state 21
    "nothrow"          shift, and go to state 22
    "pure"             shift, and go to state 23
    "return"           shift, and go to state 24
    "sizeof"           shift, and go to state 25
    "throw"            shift, and go to state 26
    "try"              shift, and go to state 27
    "type"             shift, and go to state 28
    "while"            shift, and go to state 29

    $default  reduce using rule 3 (statements)

    nikola                 go to state 30
    statements             go to state 31
    compound_statement     go to state 32
    if_statement           go to state 33
    conditional_statement  go to state 34
    for_loop               go to state 35
    while_loop             go to state 36
    do_while_loop          go to state 37
    loop_statement         go to state 38
    match_statement        go to state 39
    exception_statement    go to state 40
    jump_statement         go to state 41
    statement              go to state 42
    literal                go to state 43
    expression             go to state 44


State 1

   42 literal: INTEGER_LITERAL •

    $default  reduce using rule 42 (literal)


State 2

   43 literal: REAL_LITERAL •

    $default  reduce using rule 43 (literal)


State 3

   44 literal: COMPLEX_LITERAL •

    $default  reduce using rule 44 (literal)


State 4

   45 literal: STRING_LITERAL •

    $default  reduce using rule 45 (literal)


State 5

   46 literal: CHARACTER_LITERAL •

    $default  reduce using rule 46 (literal)


State 6

   54 expression: IDENTIFIER •

    $default  reduce using rule 54 (expression)


State 7

   88 expression: "!" • expression

    INTEGER_LITERAL    shift, and go to state 1
    REAL_LITERAL       shift, and go to state 2
    COMPLEX_LITERAL    shift, and go to state 3
    STRING_LITERAL     shift, and go to state 4
    CHARACTER_LITERAL  shift, and go to state 5
    IDENTIFIER         shift, and go to state 6
    "!"                shift, and go to state 7
    "&"                shift, and go to state 8
    "|"                shift, and go to state 9
    "++"               shift, and go to state 10
    "--"               shift, and go to state 11
    "["                shift, and go to state 12
    "{"                shift, and go to state 45
    "("                shift, and go to state 14
    "nothrow"          shift, and go to state 22
    "pure"             shift, and go to state 23
    "sizeof"           shift, and go to state 25
    "type"             shift, and go to state 28

    literal     go to state 43
    expression  go to state 46


State 8

   98 expression: "&" • expression

    INTEGER_LITERAL    shift, and go to state 1
    REAL_LITERAL       shift, and go to state 2
    COMPLEX_LITERAL    shift, and go to state 3
    STRING_LITERAL     shift, and go to state 4
    CHARACTER_LITERAL  shift, and go to state 5
    IDENTIFIER         shift, and go to state 6
    "!"                shift, and go to state 7
    "&"                shift, and go to state 8
    "|"                shift, and go to state 9
    "++"               shift, and go to state 10
    "--"               shift, and go to state 11
    "["                shift, and go to state 12
    "{"                shift, and go to state 45
    "("                shift, and go to state 14
    "nothrow"          shift, and go to state 22
    "pure"             shift, and go to state 23
    "sizeof"           shift, and go to state 25
    "type"             shift, and go to state 28

    literal     go to state 43
    expression  go to state 47


State 9

   56 expression: "|" • expression "|"

    INTEGER_LITERAL    shift, and go to state 1
    REAL_LITERAL       shift, and go to state 2
    COMPLEX_LITERAL    shift, and go to state 3
    STRING_LITERAL     shift, and go to state 4
    CHARACTER_LITERAL  shift, and go to state 5
    IDENTIFIER         shift, and go to state 6
    "!"                shift, and go to state 7
    "&"                shift, and go to state 8
    "|"                shift, and go to state 9
    "++"               shift, and go to state 10
    "--"               shift, and go to state 11
    "["                shift, and go to state 12
    "{"                shift, and go to state 45
    "("                shift, and go to state 14
    "nothrow"          shift, and go to state 22
    "pure"             shift, and go to state 23
    "sizeof"           shift, and go to state 25
    "type"             shift, and go to state 28

    literal     go to state 43
    expression  go to state 48


State 10

   99 expression: "++" • expression

    INTEGER_LITERAL    shift, and go to state 1
    REAL_LITERAL       shift, and go to state 2
    COMPLEX_LITERAL    shift, and go to state 3
    STRING_LITERAL     shift, and go to state 4
    CHARACTER_LITERAL  shift, and go to state 5
    IDENTIFIER         shift, and go to state 6
    "!"                shift, and go to state 7
    "&"                shift, and go to state 8
    "|"                shift, and go to state 9
    "++"               shift, and go to state 10
    "--"               shift, and go to state 11
    "["                shift, and go to state 12
    "{"                shift, and go to state 45
    "("                shift, and go to state 14
    "nothrow"          shift, and go to state 22
    "pure"             shift, and go to state 23
    "sizeof"           shift, and go to state 25
    "type"             shift, and go to state 28

    literal     go to state 43
    expression  go to state 49


State 11

  101 expression: "--" • expression

    INTEGER_LITERAL    shift, and go to state 1
    REAL_LITERAL       shift, and go to state 2
    COMPLEX_LITERAL    shift, and go to state 3
    STRING_LITERAL     shift, and go to state 4
    CHARACTER_LITERAL  shift, and go to state 5
    IDENTIFIER         shift, and go to state 6
    "!"                shift, and go to state 7
    "&"                shift, and go to state 8
    "|"                shift, and go to state 9
    "++"               shift, and go to state 10
    "--"               shift, and go to state 11
    "["                shift, and go to state 12
    "{"                shift, and go to state 45
    "("                shift, and go to state 14
    "nothrow"          shift, and go to state 22
    "pure"             shift, and go to state 23
    "sizeof"           shift, and go to state 25
    "type"             shift, and go to state 28

    literal     go to state 43
    expression  go to state 50


State 12

  103 expression: "[" • expression_list "]"
  104           | "[" • matrix-rows "]"

    INTEGER_LITERAL    shift, and go to state 1
    REAL_LITERAL       shift, and go to state 2
    COMPLEX_LITERAL    shift, and go to state 3
    STRING_LITERAL     shift, and go to state 4
    CHARACTER_LITERAL  shift, and go to state 5
    IDENTIFIER         shift, and go to state 6
    "!"                shift, and go to state 7
    "&"                shift, and go to state 8
    "|"                shift, and go to state 9
    "++"               shift, and go to state 10
    "--"               shift, and go to state 11
    "["                shift, and go to state 12
    "{"                shift, and go to state 45
    "("                shift, and go to state 14
    MROW_START         shift, and go to state 51
    "nothrow"          shift, and go to state 22
    "pure"             shift, and go to state 23
    "sizeof"           shift, and go to state 25
    "type"             shift, and go to state 28

    literal          go to state 43
    expression_list  go to state 52
    matrix-rows      go to state 53
    expression       go to state 54


State 13

    4 compound_statement: "{" • statements "}"
  105 expression: "{" • expression_list "}"
  106           | "{" • expression "|" expression "}"

    INTEGER_LITERAL    shift, and go to state 1
    REAL_LITERAL       shift, and go to state 2
    COMPLEX_LITERAL    shift, and go to state 3
    STRING_LITERAL     shift, and go to state 4
    CHARACTER_LITERAL  shift, and go to state 5
    IDENTIFIER         shift, and go to state 6
    "!"                shift, and go to state 7
    "&"                shift, and go to state 8
    "|"                shift, and go to state 9
    "++"               shift, and go to state 10
    "--"               shift, and go to state 11
    "["                shift, and go to state 12
    "{"                shift, and go to state 13
    "("                shift, and go to state 14
    "break"            shift, and go to state 15
    "continue"         shift, and go to state 16
    "do"               shift, and go to state 17
    "for"              shift, and go to state 18
    "if"               shift, and go to state 19
    "match"            shift, and go to state 20
    "noop"             shift, and go to state 21
    "nothrow"          shift, and go to state 22
    "pure"             shift, and go to state 23
    "return"           shift, and go to state 24
    "sizeof"           shift, and go to state 25
    "throw"            shift, and go to state 26
    "try"              shift, and go to state 27
    "type"             shift, and go to state 28
    "while"            shift, and go to state 29

    $default  reduce using rule 3 (statements)

    statements             go to state 55
    compound_statement     go to state 32
    if_statement           go to state 33
    conditional_statement  go to state 34
    for_loop               go to state 35
    while_loop             go to state 36
    do_while_loop          go to state 37
    loop_statement         go to state 38
    match_statement        go to state 39
    exception_statement    go to state 40
    jump_statement         go to state 41
    statement              go to state 42
    literal                go to state 43
    expression_list        go to state 56
    expression             go to state 57


State 14

   55 expression: "(" • expression ")"

    INTEGER_LITERAL    shift, and go to state 1
    REAL_LITERAL       shift, and go to state 2
    COMPLEX_LITERAL    shift, and go to state 3
    STRING_LITERAL     shift, and go to state 4
    CHARACTER_LITERAL  shift, and go to state 5
    IDENTIFIER         shift, and go to state 6
    "!"                shift, and go to state 7
    "&"                shift, and go to state 8
    "|"                shift, and go to state 9
    "++"               shift, and go to state 10
    "--"               shift, and go to state 11
    "["                shift, and go to state 12
    "{"                shift, and go to state 45
    "("                shift, and go to state 14
    "nothrow"          shift, and go to state 22
    "pure"             shift, and go to state 23
    "sizeof"           shift, and go to state 25
    "type"             shift, and go to state 28

    literal     go to state 43
    expression  go to state 58


State 15

   32 jump_statement: "break" • ";"

    ";"  shift, and go to state 59


State 16

   33 jump_statement: "continue" • ";"

    ";"  shift, and go to state 60


State 17

   16 do_while_loop: "do" • compound_statement "while" "(" expression ")" compound_statement

    "{"  shift, and go to state 61

    compound_statement  go to state 62


State 18

   14 for_loop: "for" • "(" expression_opt ";" expression_opt ";" expression_opt ")" compound_statement

    "("  shift, and go to state 63


State 19

    5 if_statement: "if" • "(" expression ")" compound_statement

    "("  shift, and go to state 64


State 20

   23 match_statement: "match" • "(" expression ")" "{" match_clauses else_statement_opt "}"

    "("  shift, and go to state 65


State 21

   35 statement: "noop" • ";"

    ";"  shift, and go to state 66


State 22

  109 expression: "nothrow" • "(" expression ")"

    "("  shift, and go to state 67


State 23

  110 expression: "pure" • "(" expression ")"

    "("  shift, and go to state 68


State 24

   28 jump_statement: "return" • ";"
   29               | "return" • expression ";"

    INTEGER_LITERAL    shift, and go to state 1
    REAL_LITERAL       shift, and go to state 2
    COMPLEX_LITERAL    shift, and go to state 3
    STRING_LITERAL     shift, and go to state 4
    CHARACTER_LITERAL  shift, and go to state 5
    IDENTIFIER         shift, and go to state 6
    "!"                shift, and go to state 7
    "&"                shift, and go to state 8
    "|"                shift, and go to state 9
    "++"               shift, and go to state 10
    "--"               shift, and go to state 11
    "["                shift, and go to state 12
    "{"                shift, and go to state 45
    "("                shift, and go to state 14
    ";"                shift, and go to state 69
    "nothrow"          shift, and go to state 22
    "pure"             shift, and go to state 23
    "sizeof"           shift, and go to state 25
    "type"             shift, and go to state 28

    literal     go to state 43
    expression  go to state 70


State 25

  111 expression: "sizeof" • "(" expression ")"

    "("  shift, and go to state 71


State 26

   30 jump_statement: "throw" • ";"
   31               | "throw" • expression ";"

    INTEGER_LITERAL    shift, and go to state 1
    REAL_LITERAL       shift, and go to state 2
    COMPLEX_LITERAL    shift, and go to state 3
    STRING_LITERAL     shift, and go to state 4
    CHARACTER_LITERAL  shift, and go to state 5
    IDENTIFIER         shift, and go to state 6
    "!"                shift, and go to state 7
    "&"                shift, and go to state 8
    "|"                shift, and go to state 9
    "++"               shift, and go to state 10
    "--"               shift, and go to state 11
    "["                shift, and go to state 12
    "{"                shift, and go to state 45
    "("                shift, and go to state 14
    ";"                shift, and go to state 72
    "nothrow"          shift, and go to state 22
    "pure"             shift, and go to state 23
    "sizeof"           shift, and go to state 25
    "type"             shift, and go to state 28

    literal     go to state 43
    expression  go to state 73


State 27

   24 exception_statement: "try" • compound_statement catch_statement catch_statements

    "{"  shift, and go to state 61

    compound_statement  go to state 74


State 28

  112 expression: "type" • "(" expression ")"

    "("  shift, and go to state 75


State 29

   15 while_loop: "while" • "(" expression ")" compound_statement

    "("  shift, and go to state 76


State 30

    0 $accept: nikola • $end

    $end  shift, and go to state 77


State 31

    1 nikola: statements •

    $default  reduce using rule 1 (nikola)


State 32

   34 statement: compound_statement •

    $default  reduce using rule 34 (statement)


State 33

   12 conditional_statement: if_statement • else_if_statements else_statement_opt
   13                      | if_statement • else_statement_opt

    "else"     shift, and go to state 78
    "else if"  shift, and go to state 79

    $default  reduce using rule 11 (else_statement_opt)

    else_if_statement   go to state 80
    else_if_statements  go to state 81
    else_statement      go to state 82
    else_statement_opt  go to state 83


State 34

   37 statement: conditional_statement •

    $default  reduce using rule 37 (statement)


State 35

   17 loop_statement: for_loop •

    $default  reduce using rule 17 (loop_statement)


State 36

   18 loop_statement: while_loop •

    $default  reduce using rule 18 (loop_statement)


State 37

   19 loop_statement: do_while_loop •

    $default  reduce using rule 19 (loop_statement)


State 38

   38 statement: loop_statement •

    $default  reduce using rule 38 (statement)


State 39

   39 statement: match_statement •

    $default  reduce using rule 39 (statement)


State 40

   40 statement: exception_statement •

    $default  reduce using rule 40 (statement)


State 41

   41 statement: jump_statement •

    $default  reduce using rule 41 (statement)


State 42

    2 statements: statement • statements

    INTEGER_LITERAL    shift, and go to state 1
    REAL_LITERAL       shift, and go to state 2
    COMPLEX_LITERAL    shift, and go to state 3
    STRING_LITERAL     shift, and go to state 4
    CHARACTER_LITERAL  shift, and go to state 5
    IDENTIFIER         shift, and go to state 6
    "!"                shift, and go to state 7
    "&"                shift, and go to state 8
    "|"                shift, and go to state 9
    "++"               shift, and go to state 10
    "--"               shift, and go to state 11
    "["                shift, and go to state 12
    "{"                shift, and go to state 13
    "("                shift, and go to state 14
    "break"            shift, and go to state 15
    "continue"         shift, and go to state 16
    "do"               shift, and go to state 17
    "for"              shift, and go to state 18
    "if"               shift, and go to state 19
    "match"            shift, and go to state 20
    "noop"             shift, and go to state 21
    "nothrow"          shift, and go to state 22
    "pure"             shift, and go to state 23
    "return"           shift, and go to state 24
    "sizeof"           shift, and go to state 25
    "throw"            shift, and go to state 26
    "try"              shift, and go to state 27
    "type"             shift, and go to state 28
    "while"            shift, and go to state 29

    $default  reduce using rule 3 (statements)

    statements             go to state 84
    compound_statement     go to state 32
    if_statement           go to state 33
    conditional_statement  go to state 34
    for_loop               go to state 35
    while_loop             go to state 36
    do_while_loop          go to state 37
    loop_statement         go to state 38
    match_statement        go to state 39
    exception_statement    go to state 40
    jump_statement         go to state 41
    statement              go to state 42
    literal                go to state 43
    expression             go to state 44


State 43

   53 expression: literal •

    $default  reduce using rule 53 (expression)


State 44
